syntax = "proto3";

package common;

message RpcEmpty {}
