syntax = "proto3";

package uhura;

import "common.proto";

service RpcUhura {
	rpc Status(common.RpcEmpty) returns (RpcUhuraStatus) {}
}

message RpcUhuraStatus {
	int32 pid = 1;
}
